# expeval

./: CMakeLists.txt  README.md
include/expeval/: constant.h  context.h  expeval.h  expeval_ext.h  function.h  math_operations.h  operator.h  result.h  result_code.h
include/expeval/internal/: element.h  expeval_flags.h  macros.h  name_resolver.h  number_parser.h  operand.h  operand_actions.h  parser.h  priorities_info.h
src/: expeval.c  expeval_ext.c  math_operations.c  result.c  result_code.c
src/internal/: name_resolver.c  number_parser.c  operand_actions.c  parser.c
test/: CMakeLists.txt  common.c  contextual_expressions.c  invalid_expressions.c  valid_expressions.c
test/include/: common.h
test/src/: common.c  invalid_contextual_expressions.c  valid_contextual_expressions.c  valid_expressions.c
tests/: common.h  invalid_expressions.c
